[package]
name = "blockchain-cryptocurrency-practice"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
hmac-sha256 = "1.1.7"
k256 = { version = "0.13.1", features = ["serde"] }
num-bigint = "0.4.4"
obj2str = { version = "1.0.0", path = "obj2str/obj2str" }
obj2str_derive = { version = "1.0.0", path = "obj2str/obj2str_derive" }
rand = "0.8.5"
rand_core = "0.6.4"
semaphore = { version = "1.0.0", path = "semaphore" }
serde = "1.0.188"
serde_derive = "1.0.188"
